<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickHandler"
            type="com.codebosses.roomdatabase.activities.LoginActivity.LoginClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <View
            android:id="@+id/viewTopLogIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/bg_gradient"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLogInHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@+id/viewTopLogIn"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.gigamole.library.ShadowLayout
            android:id="@+id/shadowLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/viewTopLogIn"
            app:sl_shadow_angle="45"
            app:sl_shadow_color="@color/colorDivider"
            app:sl_shadow_distance="2dp"
            app:sl_shadow_radius="2dp"
            app:sl_shadowed="true">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/proxima_nova_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorDivider"
                android:textSize="@dimen/_14ssp" />

        </com.gigamole.library.ShadowLayout>

        <com.gigamole.library.ShadowLayout
            android:id="@+id/shadowLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/shadowLayoutEmail"
            app:sl_shadow_angle="45"
            app:sl_shadow_color="@color/colorDivider"
            app:sl_shadow_distance="2dp"
            app:sl_shadow_radius="2dp"
            app:sl_shadowed="true">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/proxima_nova_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorDivider"
                android:textSize="@dimen/_14ssp" />

        </com.gigamole.library.ShadowLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22sdp"
            android:fontFamily="@font/proxima_nova_regular"
            android:onClick="@{clickHandler::onForgotPasswordClick}"
            android:text="@string/forgot_password"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shadowLayoutPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/proxima_nova_regular"
            android:onClick="@{clickHandler::onLoginClick}"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

        <LinearLayout
            android:id="@+id/linearLayoutDontHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textViewDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/dont_have_account"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/proxima_nova_regular"
                android:onClick="@{clickHandler::onRegisterClick}"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>